--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>This is the first file.</p>
+<div><img src="img_hello_world.jpg"alt="Hello World from Space"
+Style="width:100%;max-width:960px"></div>
+<p>This is the first file in my new git repo.<p>
+<p> A new line in our file!<p>
 
 </body>
 </html>
